# modelzoo

./: .gitattributes  AutoTVM_config_example_cuda.py  AutoTVM_config_example_llvm.py  README.md  definition_template.yaml  test.pb
.github/workflows/: compilation-push-master.yaml  docker-pr.yaml  docker-push-master.yaml  docker-release.yaml  pr-build-test.yaml  pr-lint.yaml  pr-validation.yaml  push-build-upload.yaml  release-build-upload.yaml  reusable-build-upload-docker.yaml  reusable-bundle-docker.yaml  reusable-compile-upload-models.yaml
documentation/: versioning.md
perception/: README.md
perception/camera_obstacle_detection/: README.md
perception/camera_obstacle_detection/yolo_v2_tiny/tensorflow_fp32_coco/: README.md  definition.yaml
perception/camera_obstacle_detection/yolo_v2_tiny/tensorflow_fp32_coco/example_pipeline/: CMakeLists.txt  main.cpp
perception/camera_obstacle_detection/yolo_v2_tiny/tensorflow_fp32_coco/model_files/: yolov2-tiny.pb
perception/camera_obstacle_detection/yolo_v3/tensorflow_fp32_coco/: README.md  definition.yaml
perception/camera_obstacle_detection/yolo_v3/tensorflow_fp32_coco/execute_model/: CMakeLists.txt  main.cpp
perception/camera_obstacle_detection/yolo_v3/tensorflow_fp32_coco/model_files/: anchors.csv  yolov3-416.onnx
perception/camera_traffic_light_detection/: README.md
perception/lidar_obstacle_detection/: README.md
perception/lidar_obstacle_detection/baidu_cnn/onnx_bcnn/: README.md  definition.yaml
perception/lidar_obstacle_detection/centerpoint_backbone/onnx_centerpoint_backbone/: README.md  definition.yaml
perception/lidar_obstacle_detection/centerpoint_encoder/onnx_centerpoint_encoder/: README.md  definition.yaml
perception/lidar_obstacle_detection/point_pillars_pfe/onnx_fp32_kitti/: README.md  definition.yaml
perception/lidar_obstacle_detection/point_pillars_rpn/onnx_fp32_kitti/: README.md  definition.yaml
scripts/tvm_cli/: AutoTVM_config_example_cuda.py  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.cuda  Dockerfile.dependencies.amd64  Dockerfile.dependencies.arm64  README.md  build.sh  install_tvm.sh  test.py  tvm_cli.py
scripts/tvm_cli/templates/: inference_engine_tvm_config.hpp.jinja2
scripts/tvm_cli/validation/: tvm_cli_test.py
scripts/validation/: tvm_cli_test.py
(+9 files in other folders)
